--- a/resources.qrc
+++ b/resources.qrc
@@ -30,5 +30,22 @@
         <file>localization/localization_sv_SE.ts</file>
         <file>localization/localization_zh_CN.ts</file>
         <file>localization/localization_ru_RU.ts</file>
+        <file>artwork/new blue/cancel.png</file>
+        <file>artwork/new blue/delete.png</file>
+        <file>artwork/new blue/down-arrow.png</file>
+        <file>artwork/new blue/edit.png</file>
+        <file>artwork/new blue/help.png</file>
+        <file>artwork/new blue/info.png</file>
+        <file>artwork/new blue/key.png</file>
+        <file>artwork/new blue/left-arrow.png</file>
+        <file>artwork/new blue/ok.png</file>
+        <file>artwork/new blue/right-arrow.png</file>
+        <file>artwork/new blue/search.png</file>
+        <file>artwork/new blue/settings.png</file>
+        <file>artwork/new blue/up-arrow.png</file>
+        <file>artwork/new blue/user.png</file>
+        <file>artwork/new blue/search_25_1.png</file>
+        <file>artwork/new blue/search_25_2.png</file>
+        <file>artwork/new blue/add.png</file>
     </qresource>
 </RCC>
