--- a/keygendialog.ui
+++ b/keygendialog.ui
@@ -874,14 +874,32 @@
       </item>
       <item>
        <widget class="QLabel" name="labelPassphraseInfo">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>170</height>
+         </size>
+        </property>
+        <property name="baseSize">
+         <size>
+          <width>0</width>
+          <height>0</height>
+         </size>
+        </property>
         <property name="styleSheet">
-         <string notr="true">QLabel {color: #5694f2;}</string>
+         <string notr="true">QLabel {color: #5694f2; margin-left: 10px; margin-right: 10px; margin-bottom: 5px; margin-top: 5px; padding-bottom: 10px; }</string>
         </property>
         <property name="text">
          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;There is no limit on the length of a passphrase, and it should be carefully chosen. From the perspective of security, the passphrase to unlock the private key is one of the weakest points in GnuPG (and other public-key encryption systems as well) since it is the only protection you have if another individual gets your private key. &lt;br/&gt;Ideally, the passphrase should not use words from a dictionary and should mix the case of alphabetic characters as well as use non-alphabetic characters.&lt;br/&gt;A good passphrase is crucial to the secure use of GnuPG.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
+        <property name="alignment">
+         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+        </property>
         <property name="wordWrap">
          <bool>true</bool>
+        </property>
+        <property name="margin">
+         <number>0</number>
         </property>
        </widget>
       </item>
@@ -893,54 +911,54 @@
            <colorrole role="WindowText">
             <brush brushstyle="SolidPattern">
              <color alpha="255">
-              <red>170</red>
-              <green>170</green>
-              <blue>170</blue>
+              <red>252</red>
+              <green>65</green>
+              <blue>65</blue>
              </color>
             </brush>
            </colorrole>
            <colorrole role="Button">
             <brush brushstyle="SolidPattern">
              <color alpha="255">
-              <red>85</red>
-              <green>85</green>
-              <blue>85</blue>
+              <red>38</red>
+              <green>38</green>
+              <blue>38</blue>
              </color>
             </brush>
            </colorrole>
            <colorrole role="Text">
             <brush brushstyle="SolidPattern">
              <color alpha="255">
-              <red>170</red>
-              <green>170</green>
-              <blue>170</blue>
+              <red>252</red>
+              <green>65</green>
+              <blue>65</blue>
              </color>
             </brush>
            </colorrole>
            <colorrole role="ButtonText">
             <brush brushstyle="SolidPattern">
              <color alpha="255">
-              <red>170</red>
-              <green>170</green>
-              <blue>170</blue>
+              <red>252</red>
+              <green>65</green>
+              <blue>65</blue>
              </color>
             </brush>
            </colorrole>
            <colorrole role="Base">
             <brush brushstyle="SolidPattern">
              <color alpha="255">
-              <red>247</red>
-              <green>247</green>
-              <blue>247</blue>
+              <red>38</red>
+              <green>38</green>
+              <blue>38</blue>
              </color>
             </brush>
            </colorrole>
            <colorrole role="Window">
             <brush brushstyle="SolidPattern">
              <color alpha="255">
-              <red>236</red>
-              <green>11</green>
-              <blue>11</blue>
+              <red>38</red>
+              <green>38</green>
+              <blue>38</blue>
              </color>
             </brush>
            </colorrole>
@@ -967,54 +985,54 @@
            <colorrole role="WindowText">
             <brush brushstyle="SolidPattern">
              <color alpha="255">
-              <red>170</red>
-              <green>170</green>
-              <blue>170</blue>
+              <red>252</red>
+              <green>65</green>
+              <blue>65</blue>
              </color>
             </brush>
            </colorrole>
            <colorrole role="Button">
             <brush brushstyle="SolidPattern">
              <color alpha="255">
-              <red>85</red>
-              <green>85</green>
-              <blue>85</blue>
+              <red>38</red>
+              <green>38</green>
+              <blue>38</blue>
              </color>
             </brush>
            </colorrole>
            <colorrole role="Text">
             <brush brushstyle="SolidPattern">
              <color alpha="255">
-              <red>170</red>
-              <green>170</green>
-              <blue>170</blue>
+              <red>252</red>
+              <green>65</green>
+              <blue>65</blue>
              </color>
             </brush>
            </colorrole>
            <colorrole role="ButtonText">
             <brush brushstyle="SolidPattern">
              <color alpha="255">
-              <red>170</red>
-              <green>170</green>
-              <blue>170</blue>
+              <red>252</red>
+              <green>65</green>
+              <blue>65</blue>
              </color>
             </brush>
            </colorrole>
            <colorrole role="Base">
             <brush brushstyle="SolidPattern">
              <color alpha="255">
-              <red>247</red>
-              <green>247</green>
-              <blue>247</blue>
+              <red>38</red>
+              <green>38</green>
+              <blue>38</blue>
              </color>
             </brush>
            </colorrole>
            <colorrole role="Window">
             <brush brushstyle="SolidPattern">
              <color alpha="255">
-              <red>236</red>
-              <green>11</green>
-              <blue>11</blue>
+              <red>38</red>
+              <green>38</green>
+              <blue>38</blue>
              </color>
             </brush>
            </colorrole>
@@ -1041,54 +1059,54 @@
            <colorrole role="WindowText">
             <brush brushstyle="SolidPattern">
              <color alpha="255">
-              <red>170</red>
-              <green>170</green>
-              <blue>170</blue>
+              <red>252</red>
+              <green>65</green>
+              <blue>65</blue>
              </color>
             </brush>
            </colorrole>
            <colorrole role="Button">
             <brush brushstyle="SolidPattern">
              <color alpha="255">
-              <red>85</red>
-              <green>85</green>
-              <blue>85</blue>
+              <red>38</red>
+              <green>38</green>
+              <blue>38</blue>
              </color>
             </brush>
            </colorrole>
            <colorrole role="Text">
             <brush brushstyle="SolidPattern">
              <color alpha="255">
-              <red>170</red>
-              <green>170</green>
-              <blue>170</blue>
+              <red>252</red>
+              <green>65</green>
+              <blue>65</blue>
              </color>
             </brush>
            </colorrole>
            <colorrole role="ButtonText">
             <brush brushstyle="SolidPattern">
              <color alpha="255">
-              <red>170</red>
-              <green>170</green>
-              <blue>170</blue>
+              <red>252</red>
+              <green>65</green>
+              <blue>65</blue>
              </color>
             </brush>
            </colorrole>
            <colorrole role="Base">
             <brush brushstyle="SolidPattern">
              <color alpha="255">
-              <red>236</red>
-              <green>11</green>
-              <blue>11</blue>
+              <red>38</red>
+              <green>38</green>
+              <blue>38</blue>
              </color>
             </brush>
            </colorrole>
            <colorrole role="Window">
             <brush brushstyle="SolidPattern">
              <color alpha="255">
-              <red>236</red>
-              <green>11</green>
-              <blue>11</blue>
+              <red>38</red>
+              <green>38</green>
+              <blue>38</blue>
              </color>
             </brush>
            </colorrole>
@@ -1113,11 +1131,17 @@
           </disabled>
          </palette>
         </property>
+        <property name="font">
+         <font>
+          <weight>50</weight>
+          <bold>false</bold>
+         </font>
+        </property>
         <property name="autoFillBackground">
-         <bool>true</bool>
+         <bool>false</bool>
         </property>
         <property name="styleSheet">
-         <string notr="true">QCheckBox {color: #aaaaaa;}</string>
+         <string notr="true">QCheckBox {background-color: #262626; color: #fc4141; margin-left: 10px;}</string>
         </property>
         <property name="text">
          <string>Expert</string>
@@ -1166,6 +1190,9 @@
           </disabled>
          </palette>
         </property>
+        <property name="styleSheet">
+         <string notr="true"/>
+        </property>
         <property name="readOnly">
          <bool>true</bool>
         </property>
@@ -1196,11 +1223,129 @@ Expire-Date: 0
       </item>
       <item>
        <widget class="QLabel" name="labelExpertInfo">
+        <property name="palette">
+         <palette>
+          <active>
+           <colorrole role="WindowText">
+            <brush brushstyle="SolidPattern">
+             <color alpha="255">
+              <red>86</red>
+              <green>148</green>
+              <blue>242</blue>
+             </color>
+            </brush>
+           </colorrole>
+           <colorrole role="Text">
+            <brush brushstyle="SolidPattern">
+             <color alpha="255">
+              <red>86</red>
+              <green>148</green>
+              <blue>242</blue>
+             </color>
+            </brush>
+           </colorrole>
+           <colorrole role="ButtonText">
+            <brush brushstyle="SolidPattern">
+             <color alpha="255">
+              <red>86</red>
+              <green>148</green>
+              <blue>242</blue>
+             </color>
+            </brush>
+           </colorrole>
+           <colorrole role="Link">
+            <brush brushstyle="SolidPattern">
+             <color alpha="255">
+              <red>255</red>
+              <green>255</green>
+              <blue>255</blue>
+             </color>
+            </brush>
+           </colorrole>
+          </active>
+          <inactive>
+           <colorrole role="WindowText">
+            <brush brushstyle="SolidPattern">
+             <color alpha="255">
+              <red>86</red>
+              <green>148</green>
+              <blue>242</blue>
+             </color>
+            </brush>
+           </colorrole>
+           <colorrole role="Text">
+            <brush brushstyle="SolidPattern">
+             <color alpha="255">
+              <red>86</red>
+              <green>148</green>
+              <blue>242</blue>
+             </color>
+            </brush>
+           </colorrole>
+           <colorrole role="ButtonText">
+            <brush brushstyle="SolidPattern">
+             <color alpha="255">
+              <red>86</red>
+              <green>148</green>
+              <blue>242</blue>
+             </color>
+            </brush>
+           </colorrole>
+           <colorrole role="Link">
+            <brush brushstyle="SolidPattern">
+             <color alpha="255">
+              <red>255</red>
+              <green>255</green>
+              <blue>255</blue>
+             </color>
+            </brush>
+           </colorrole>
+          </inactive>
+          <disabled>
+           <colorrole role="WindowText">
+            <brush brushstyle="SolidPattern">
+             <color alpha="255">
+              <red>86</red>
+              <green>148</green>
+              <blue>242</blue>
+             </color>
+            </brush>
+           </colorrole>
+           <colorrole role="Text">
+            <brush brushstyle="SolidPattern">
+             <color alpha="255">
+              <red>86</red>
+              <green>148</green>
+              <blue>242</blue>
+             </color>
+            </brush>
+           </colorrole>
+           <colorrole role="ButtonText">
+            <brush brushstyle="SolidPattern">
+             <color alpha="255">
+              <red>86</red>
+              <green>148</green>
+              <blue>242</blue>
+             </color>
+            </brush>
+           </colorrole>
+           <colorrole role="Link">
+            <brush brushstyle="SolidPattern">
+             <color alpha="255">
+              <red>255</red>
+              <green>255</green>
+              <blue>255</blue>
+             </color>
+            </brush>
+           </colorrole>
+          </disabled>
+         </palette>
+        </property>
         <property name="styleSheet">
          <string notr="true">QLabel {color: #5694f2;}</string>
         </property>
         <property name="text">
-         <string>For expert options check out the &lt;a href=&quot;https://www.gnupg.org/documentation/manuals/gnupg/Unattended-GPG-key-generation.html&quot;&gt;GnuPG manual&lt;/a&gt;</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;For expert options check out the &lt;a href=&quot;https://www.gnupg.org/documentation/manuals/gnupg/Unattended-GPG-key-generation.html&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#ffffff;&quot;&gt;GnuPG manual&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
         <property name="openExternalLinks">
          <bool>true</bool>
