--- a/configdialog.ui
+++ b/configdialog.ui
@@ -29,7 +29,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>3</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="Tab_Settings">
       <attribute name="title">
@@ -404,6 +404,13 @@
             <widget class="QCheckBox" name="checkBoxHideOnClose">
              <property name="text">
               <string>Hide on close</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QCheckBox" name="checkBoxAlwaysOnTop">
+             <property name="text">
+              <string>Always on top</string>
              </property>
             </widget>
            </item>
