Tiny cleanup in allignment

--- a/configdialog.ui
+++ b/configdialog.ui
@@ -324,14 +324,18 @@
           </widget>
          </item>
          <item>
-          <widget class="QCheckBox" name="checkBoxUseGit">
-           <property name="enabled">
-            <bool>true</bool>
-           </property>
-           <property name="text">
-            <string>Use git</string>
-           </property>
-          </widget>
+          <layout class="QHBoxLayout" name="horizontalLayout_9">
+           <item>
+            <widget class="QCheckBox" name="checkBoxUseGit">
+             <property name="enabled">
+              <bool>true</bool>
+             </property>
+             <property name="text">
+              <string>Use git</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
          </item>
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout_12">
